# saga-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: agents.yaml
config/agents/: event-deduplicator.md  re-categorizer.md
src/saga_agents/: __init__.py  app.py
src/saga_agents/config/: __init__.py  loader.py  models.py
src/saga_agents/core/: __init__.py  env.py  errors.py  logging.py
src/saga_agents/metrics/: __init__.py  registry.py
src/saga_agents/proposals/: __init__.py  apply.py  store.py
src/saga_agents/runtime/: __init__.py  guidance.py  mcp_call.py  model.py  propose.py  report.py  runner.py  toolset.py
src/saga_agents/tracing/: __init__.py  langfuse.py
src/saga_agents/triggers/: __init__.py  api.py  base.py  executor.py  redis_listener.py  scheduler.py
tests/: test_app_wiring.py
tests/agents/: test_event_deduplicator_def.py  test_re_categorizer_def.py
tests/config/: __init__.py  test_agent_loader.py  test_env.py  test_global_config.py
tests/core/: test_errors.py  test_logging.py
tests/metrics/: test_registry.py
tests/proposals/: test_apply.py  test_store.py
tests/runtime/: conftest.py  test_guidance.py  test_guidance_provider.py  test_model.py  test_propose.py  test_runner.py  test_toolset.py
tests/tracing/: test_langfuse.py
tests/triggers/: test_api.py  test_api_metrics.py  test_debounce.py  test_executor.py  test_executor_metrics.py  test_redis_listener.py  test_scheduler.py
