[project]
name = "saga-agents"
version = "0.1.0"
description = "Autonomous agent runner for Saga: declarative Markdown agents over the Saga MCP server, with event/cron/external triggers and human-approval proposals."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Saga contributors" }]
keywords = ["saga", "agents", "pydantic-ai", "mcp", "llm", "automation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic-ai-slim[openai,mcp]>=0.1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "redis>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10",
    "aiosqlite>=0.20",
    "logfire>=0.50",
    "opentelemetry-api>=1.20",
    "structlog>=24.1",
    "prometheus-client>=0.25.0",
]

[project.scripts]
saga-agents = "saga_agents.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saga_agents"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TC", "RUF", "ANN", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101", "TC"]
# FastAPI / Pydantic-AI resolve annotations at runtime, so the typing-only-import
# rules (TC001/TC002/TC003) would move imports these modules need at runtime.
"src/saga_agents/app.py" = ["TC"]
"src/saga_agents/runtime/*" = ["TC"]
"src/saga_agents/triggers/*" = ["TC"]
"src/saga_agents/proposals/apply.py" = ["TC"]
"src/saga_agents/tracing/langfuse.py" = ["TC"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
show_error_codes = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=saga_agents --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["saga_agents"]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
